# reotp

./: README.md
webopt/: app.py  crear_bear.py  install.sh  pyproject.toml  requirements.txt  update.sh
webopt/osod/: instalar.sh
webopt/osod/static/: bear.css  bear.js
webopt/osod/templates/: login_choice.html
webopt/static/: bear.js
webopt/templates/: admin.html  index.html  login.html  login_choice.html  user_login.html
