[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-socketio>=5.6.0",
    "gevent>=24.0.0",
    "gevent-websocket>=0.10.1",
    "psycopg2-binary>=2.9.11",
    "python-telegram-bot>=22.5",
]
